--- a/index.html
+++ b/index.html
@@ -18,31 +18,34 @@
 
   <body>
     <header id="head">
-      <ul class="nav-links">
-        <li><a href="#home">الرئيسية</a></li>
-        <li><a href="#whyUs">لماذا نحن</a></li>
-        <li><a href="#programs">البرامج</a></li>
-        <li><a href="#about">عن الأكاديمية</a></li>
-        <li><a href="#faq">الأسئلة الشائعة</a></li>
-        <li><a href="#contact">تواصل معنا</a></li>
-      </ul>
+      <nav class="nav-container"> 
+        <ul class="nav-links">
+          <li><a href="#home">الرئيسية</a></li>
+          <li><a href="#whyUs">لماذا نحن</a></li>
+          <li><a href="#programs">البرامج</a></li>
+          <li><a href="#about">عن الأكاديمية</a></li>
+          <li><a href="#faq">الأسئلة الشائعة</a></li>
+          <li><a href="#contact">تواصل معنا</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main id="hero" class="Main-section">
       <section id="home">
-        <div class="img-bg">
-          <img src="/imgs/3D-desktop.webp" alt="" class="D-desktop">
-        </div>
+        <div class="filter"></div> 
+        <img src="imgs/studey-home.gif" alt="hero-img-person" class="D-desktop">
 
-        <article class="home-content">
+        <aside class="home-content">
           <h1>ابدا رحلتك تعلميه مع نماء اكاديمي</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium ex cum perspiciatis? Veritatis eos illo ullam velit nemo soluta nulla dolorum, eum deserunt, nisi asperiores porro dignissimos totam quasi inventore?</p>
-        </article>
+          <p>نقدّم محتوى تعليمي منظّم يساعدك على التطور وبناء مهاراتك بثقة</p>
+          <a href="#">استكشف</a>
+        </aside>
+
       </section>
 
-      <!-- <section>
+      <section id="whyUs">
         s
-      </section> -->
+      </section>
     </main>
     
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/gsap.min.js"></script>
