--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
   <link rel="stylesheet" href="src/style/courses4.css">
   <link rel="stylesheet" href="src/style/Testimonials6.css">
   <link rel="stylesheet" href="src/style/commonQuestions7.css">
-  <link rel="stylesheet" href="src/style/CTA8.css">
+  <link rel="stylesheet" href="src/style/FAQ8.css">
   <link rel="stylesheet" href="src/style/cards-desgin/programs-style.css">
   <title>core_academy</title>
 </head>
 
 <body>
+  <a href="#" id="whts-contect">واتساب</a>
   <header id="head">
     <button type="button" class="closeMenu"><img src="world/svgs/headerSvgs/menu-book.svg" alt="X"></button>
     <nav class="nav-container">
@@ -27,8 +28,8 @@
         <li><a href="#about">عن الأكاديمية</a></li>
         <li><a href="#programs">البرامج</a></li>
         <li><a href="#whyUs">لماذا نحن</a></li>
-        <li><a href="#faq">الأسئلة الشائعة</a></li>
-        <li><a href="#contact">تواصل معنا</a></li>
+        <li><a href="#FAQ">الأسئلة الشائعة</a></li>
+        <!-- <li><a href="#contact">تواصل معنا</a></li> -->
       </ul>
     </nav>
   </header>
@@ -188,7 +189,125 @@
     </section>
 
     <section id="whyUs">
-      
+      <main class="whyUs-content">
+        <section class="conatiner">
+          <article class="card big-card-stats">
+            <div class="stat-card">
+              <h4>متدرّبين</h4>
+              <strong>+12,000</strong>
+            </div>
+
+            <div class="stat-card">
+              <h4>طالب نشط سنويًا</h4>
+              <strong>+3,500</strong>
+            </div>
+
+            <div class="stat-card">
+              <h4>كورس متخصص</h4>
+              <strong>+25</strong>
+            </div>
+
+            <div class="stat-card">
+              <h4>مسارات احترافية في تطوير الويب</h4>
+              <strong>+12</strong>
+            </div>
+
+            <div class="stat-card">
+              <h4>مشاريع عمليه داخل الدورات</h4>
+              <strong>+180</strong>
+            </div>
+
+            <div class="stat-card">
+              <h4>نسبة حصول خريجينا على وظيفه</h4>
+              <strong>72%</strong>
+            </div>
+
+          </article>
+
+          <article class="card smail-card-whyUs">
+            <h2>لماذا نحن</h2>
+            <p>نتميّز بأن جميع دوراتنا مبنية على مشاريع حقيقية تحاكي بيئة العمل الفعلية، مما يمنح المتدرّب القدرة على
+              بناء ملف أعمال قوي يمكنه من المنافسة في سوق العمل. كما نقدّم دعمًا مستمرًا عبر مجتمع تفاعلي يضم مدربين
+              محترفين ومستشارين تقنيين جاهزين للإجابة على أسئلتك وتوجيهك خطوة بخطوة.</p>
+          </article>
+
+          <article class="card big-card-start ">
+            <h2>ابدأ رحلتك في تطوير الويب الآن</h2>
+            <p>هل تبحث عن طريقة عملية لتعلّم البرمجة؟ من خلال دوراتنا المتكاملة، ستنتقل من الصفر إلى الاحتراف، وتبني
+              مشاريع حقيقية تؤهلك لسوق العمل. انضم إلى آلاف المتدربين الذين اختاروا طريقهم معنا، وابدأ رحلتك التقنية
+              اليوم.</p>
+            <p>كل دورة مصمّمة بعناية لتكون عملية، واضحة، ومليئة بالتحديات الواقعية، حتى تخرج منها وأنت قادر على بناء
+              مشاريع حقيقية بنفسك.</p>
+
+            <a href="#">ابدا الان</a>
+          </article>
+
+          <article class="card smail-card-course">
+            <h2>كورسات برمجة وتطوير ويب</h2>
+            <p>نحن نؤمن أن تعلّم تطوير الويب يجب أن يكون واضحًا، عمليًا، ومبنيًا على خبرة حقيقية في السوق. لذلك أنشأنا
+              منصّة تعليمية متخصصة في تقديم كورسات احترافية تغطي أحدث التقنيات في عالم الويب، بدءًا من أساسيات HTML وCSS
+              وصولًا إلى تطوير تطبيقات متقدمة باستخدام JavaScript وReact وNode.js.</p>
+          </article>
+
+        </section>
+      </main>
+    </section>
+
+    <section id="FAQ">
+      <header class="faq-head">
+        <h2>اساله شائعه</h2>
+      </header>
+      <main class="qustions-container">
+        <section class="qustion">
+          <button type="button"><img src="world/svgs/FAQ/arrow-down.svg" alt=""></button>
+          <div class="qustion-content">
+            <h2>1) ما هي مدة الكورسات؟</h2>
+            <p>معظم الكورسات تمتد من 6 إلى 12 أسبوعًا، مع إمكانية متابعة المحتوى بشكل مرن حسب وقتك.</p>
+          </div>
+        </section>
+
+        <section class="qustion">
+          <button type="button"><img src="world/svgs/FAQ/arrow-down.svg" alt=""></button>
+          <div class="qustion-content">
+            <h2>2) هل أحتاج خبرة سابقة في البرمجة؟</h2>
+            <p>لا، جميع الكورسات تبدأ من المستوى المبتدئ وتنتقل تدريجيًا إلى المستوى المتقدم، مع شروحات واضحة ومشاريع
+              عملية.</p>
+          </div>
+        </section>
+
+        <section class="qustion">
+          <button type="button"><img src="world/svgs/FAQ/arrow-down.svg" alt=""></button>
+          <div class="qustion-content">
+            <h2>3) هل الكورسات معتمدة؟</h2>
+            <p>نعم، يحصل المتدرّب على شهادة إتمام رقمية يمكن مشاركتها على LinkedIn أو مع أصحاب العمل.</p>
+          </div>
+        </section>
+
+        <section class="qustion">
+          <button type="button"><img src="world/svgs/FAQ/arrow-down.svg" alt=""></button>
+          <div class="qustion-content">
+            <h2>4) كيف يتم تقديم المحتوى؟</h2>
+            <p>عبر فيديوهات مسجّلة عالية الجودة، بالإضافة إلى جلسات مباشرة مع المدربين، ومواد مكتوبة للرجوع إليها.</p>
+          </div>
+        </section>
+
+        <section class="qustion">
+          <button type="button"><img src="world/svgs/FAQ/arrow-down.svg" alt=""></button>
+          <div class="qustion-content">
+            <h2>5) هل هناك دعم فني أو متابعة؟</h2>
+            <p>بالتأكيد، لدينا مجتمع تفاعلي يضم مدربين وخبراء للإجابة على أسئلتك، بالإضافة إلى دعم فني متواصل.</p>
+          </div>
+        </section>
+
+        <section class="qustion">
+          <button type="button"><img src="world/svgs/FAQ/arrow-down.svg" alt=""></button>
+          <div class="qustion-content">
+            <h2>6) ما هي تكلفة الكورسات؟</h2>
+            <p>الأسعار تبدأ من 99 دولارًا للكورس الواحد، مع خصومات خاصة عند الاشتراك في أكثر من مسار تدريبي.</p>
+          </div>
+        </section>
+
+      </main>
     </section>
   </main>
 
@@ -198,6 +317,7 @@
   <script type="module" src="src/js/anmtion/Anmtion.js"></script>
   <script type="module" src="src/main.js"></script>
   <script type="module" src="src/js/sectionsJS/header.js"></script>
+  <script type="module" src="src/js/sectionsJS/FAQ.js"></script>
 </body>
 
 </html>
