--- a/index.html
+++ b/index.html
@@ -254,57 +254,64 @@
     </section>
 
     <section id="FAQ">
-      <header class="faq-head">
-        <h2>اساله شائعه</h2>
-      </header>
       <main class="qustions-container">
+        <header class="faq-head">
+          <h2>اساله شائعه</h2>
+        </header>
+
         <section class="qustion">
-          <button type="button"><img src="world/svgs/FAQ/arrow-down.svg" alt=""></button>
           <div class="qustion-content">
+            <button type="button"></button>
             <h2>1) ما هي مدة الكورسات؟</h2>
-            <p>معظم الكورسات تمتد من 6 إلى 12 أسبوعًا، مع إمكانية متابعة المحتوى بشكل مرن حسب وقتك.</p>
           </div>
+
+          <p>معظم الكورسات تمتد من 6 إلى 12 أسبوعًا، مع إمكانية متابعة المحتوى بشكل مرن حسب وقتك.</p>
         </section>
 
         <section class="qustion">
-          <button type="button"><img src="world/svgs/FAQ/arrow-down.svg" alt=""></button>
           <div class="qustion-content">
+            <button type="button"></button>
             <h2>2) هل أحتاج خبرة سابقة في البرمجة؟</h2>
-            <p>لا، جميع الكورسات تبدأ من المستوى المبتدئ وتنتقل تدريجيًا إلى المستوى المتقدم، مع شروحات واضحة ومشاريع
-              عملية.</p>
           </div>
+
+          <p>لا، جميع الكورسات تبدأ من المستوى المبتدئ وتنتقل تدريجيًا إلى المستوى المتقدم، مع شروحات واضحة ومشاريع
+            عملية.</p>
         </section>
 
         <section class="qustion">
-          <button type="button"><img src="world/svgs/FAQ/arrow-down.svg" alt=""></button>
           <div class="qustion-content">
+            <button type="button"></button>
             <h2>3) هل الكورسات معتمدة؟</h2>
-            <p>نعم، يحصل المتدرّب على شهادة إتمام رقمية يمكن مشاركتها على LinkedIn أو مع أصحاب العمل.</p>
           </div>
+
+          <p>نعم، يحصل المتدرّب على شهادة إتمام رقمية يمكن مشاركتها على LinkedIn أو مع أصحاب العمل.</p>
         </section>
 
         <section class="qustion">
-          <button type="button"><img src="world/svgs/FAQ/arrow-down.svg" alt=""></button>
           <div class="qustion-content">
+            <button type="button"></button>
             <h2>4) كيف يتم تقديم المحتوى؟</h2>
-            <p>عبر فيديوهات مسجّلة عالية الجودة، بالإضافة إلى جلسات مباشرة مع المدربين، ومواد مكتوبة للرجوع إليها.</p>
           </div>
+
+          <p>عبر فيديوهات مسجّلة عالية الجودة، بالإضافة إلى جلسات مباشرة مع المدربين، ومواد مكتوبة للرجوع إليها.</p>
         </section>
 
         <section class="qustion">
-          <button type="button"><img src="world/svgs/FAQ/arrow-down.svg" alt=""></button>
           <div class="qustion-content">
+            <button type="button"></button>
             <h2>5) هل هناك دعم فني أو متابعة؟</h2>
-            <p>بالتأكيد، لدينا مجتمع تفاعلي يضم مدربين وخبراء للإجابة على أسئلتك، بالإضافة إلى دعم فني متواصل.</p>
           </div>
+
+          <p>بالتأكيد، لدينا مجتمع تفاعلي يضم مدربين وخبراء للإجابة على أسئلتك، بالإضافة إلى دعم فني متواصل.</p>
         </section>
 
         <section class="qustion">
-          <button type="button"><img src="world/svgs/FAQ/arrow-down.svg" alt=""></button>
           <div class="qustion-content">
+            <button type="button"></button>
             <h2>6) ما هي تكلفة الكورسات؟</h2>
-            <p>الأسعار تبدأ من 99 دولارًا للكورس الواحد، مع خصومات خاصة عند الاشتراك في أكثر من مسار تدريبي.</p>
           </div>
+
+          <p>الأسعار تبدأ من 99 دولارًا للكورس الواحد، مع خصومات خاصة عند الاشتراك في أكثر من مسار تدريبي.</p>
         </section>
 
       </main>
