--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <main id="hero" class="Main-section">
     <section id="home">
       <div class="filter"></div>
-      <img src="world/imgs/studey-home.gif" alt="hero-img-person" class="D-desktop">
+      <img loading="lazy" src="world/imgs/studey-home.gif" alt="hero-img-person" class="D-desktop">
 
       <aside class="home-content">
         <h1>ابدا رحلتك تعلميه مع نماء اكاديمي</h1>
