--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <a href="#" id="whts-contect">واتساب</a>
+  <a href="https://wa.me/905344888307?text=مرحبا%%20أريد%20الاستفسار%20عن%20الكورس" id="whts-contect" target="_blank"><img src="world/svgs/whatsapp.svg" alt="whatsapp"></a>
   <header id="head">
     <button type="button" class="closeMenu"><img src="world/svgs/headerSvgs/menu-book.svg" alt="X"></button>
     <nav class="nav-container">
