--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <button type="button" class="closeMenu"><img src="world/svgs/headerSvgs/menu-book.svg" alt="X"></button>
     <nav class="nav-container">
       <ul class="nav-links">
-        <li><a href="#home">الرئيسية</a></li>
-        <li><a href="#about">عن الأكاديمية</a></li>
-        <li><a href="#programs">البرامج</a></li>
-        <li><a href="#whyUs">لماذا نحن</a></li>
-        <li><a href="#FAQ">الأسئلة الشائعة</a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
         <!-- <li><a href="#contact">تواصل معنا</a></li> -->
       </ul>
     </nav>
@@ -37,12 +37,12 @@
   <main id="hero" class="Main-section">
     <section id="home">
       <div class="filter"></div>
-      <img loading="lazy" src="world/imgs/studey-home.gif" alt="hero-img-person" class="D-desktop">
+      <img loading="lazy" src="" alt="" class="D-desktop">
 
       <aside class="home-content">
-        <h1>ابدا رحلتك تعلميه مع نماء اكاديمي</h1>
-        <p>نقدّم محتوى تعليمي منظّم يساعدك على التطور وبناء مهاراتك بثقة</p>
-        <a href="#">استكشف</a>
+        <h1></h1>
+        <p></p>
+        <a href=""></a>
       </aside>
 
     </section>
@@ -53,30 +53,27 @@
       <main class="container">
 
         <article class="about-content all-about-content">
-          <h2>من نحن</h2>
+          <h2></h2>
           <p>
-            نؤمن أن التعليم الرقمي لازم يكون واضح، منظم، وسهل الوصول.
-            هدفنا تصميم منصات تعليمية تساعد الأكاديميات على إيصال محتواها
-            بأفضل تجربة ممكنة.
+
           </p>
         </article>
 
         <figure class="img-container img-walk">
-          <img src="world/imgs/about/walk-person.gif" alt="شخص يمشي و يفكر">
+          <img src="" alt="">
         </figure>
 
         <figure class="img-container img-search">
-          <img src="world/imgs/about/search-about-git.gif" alt="شخص يمشي و يفكر">
+          <img src="" alt="">
         </figure>
 
         <figure class="img-container img-thinking">
-          <img src="world/imgs/about/thinking.jpg" alt="شخص يمشي و يفكر">
+          <img src="" alt="">
         </figure>
 
         <aside class="about-content-tow all-about-content">
           <p>
-            نعمل على تطوير منصات تعليمية رقمية تعتمد على تجربة مستخدم مدروسة وتنظيم محتوى واضح، مما يساعد الأكاديميات
-            على تقديم برامجها بشكل احترافي يعكس جودة التعليم ويزيد من ثقة الطلاب.
+
           </p>
         </aside>
       </main>
@@ -102,7 +99,7 @@
 
         <section class="card-container">
 
-          <article class="card">
+          <!-- <article class="card">
             <header class="card-head">
               <h3>أساسيات البرمجة</h3>
               <p>تعلّم مفاهيم البرمجة من الصفر بأسلوب مبسّط، مع تطبيقات عملية تساعدك تفهم المنطق البرمجي وتبني أساس قوي
@@ -121,9 +118,9 @@
               <strong>150$</strong>
               <a href="#">اشترك الان</a>
             </div>
-          </article>
+          </article> -->
 
-          <article class="card">
+          <!-- <article class="card">
             <header class="card-head">
               <h3>تطوير مواقع الويب</h3>
               <p>تعلّم كيف تبني مواقع احترافية باستخدام HTML و CSS و JavaScript، مع التركيز على التصميم، التفاعل، وتجربة
@@ -141,9 +138,9 @@
               <strong>190$</strong>
               <a href="#">اشترك الان</a>
             </div>
-          </article>
+          </article> -->
 
-          <article class="card">
+          <!-- <article class="card">
             <header class="card-head">
               <h3>تصميم واجهات المستخدم UI/UX</h3>
               <p>افهم كيف تفكّر كمصمّم، وتعلّم تصميم واجهات مريحة، جذابة، وسهلة الاستخدام مع مبادئ UX الحديثة.</p>
@@ -160,9 +157,9 @@
               <strong>219$</strong>
               <a href="#">اشترك الان</a>
             </div>
-          </article>
+          </article> -->
 
-          <article class="card">
+          <!-- <article class="card">
             <header class="card-head">
               <h3>مهارات المستقبل التقنية</h3>
               <p>نظرة شاملة على أهم المهارات التقنية المطلوبة في سوق العمل مثل التفكير المنطقي، العمل على المشاريع، وفهم
@@ -181,7 +178,7 @@
               <strong>150$</strong>
               <a href="#">اشترك الان</a>
             </div>
-          </article>
+          </article> -->
 
         </section>
 
@@ -325,6 +322,9 @@
   <script type="module" src="src/main.js"></script>
   <script type="module" src="src/js/sectionsJS/header.js"></script>
   <script type="module" src="src/js/sectionsJS/FAQ.js"></script>
+  <script type="module" src="src/js/sectionsJS/home.js"></script>
+  <script type="module" src="src/js/sectionsJS/aboutUs.js"></script>
+  <script type="module" src="src/js/sectionsJS/programs.js"></script>
 </body>
 
 </html>
