--- a/index.html
+++ b/index.html
@@ -99,87 +99,6 @@
 
         <section class="card-container">
 
-          <!-- <article class="card">
-            <header class="card-head">
-              <h3>أساسيات البرمجة</h3>
-              <p>تعلّم مفاهيم البرمجة من الصفر بأسلوب مبسّط، مع تطبيقات عملية تساعدك تفهم المنطق البرمجي وتبني أساس قوي
-                لأي
-                لغة مستقبلًا.</p>
-            </header>
-
-            <ul>
-              <li><span>مبدئ -</span></li>
-              <li><span>25 فبراير -</span></li>
-              <li><span>9 ساعات -</span></li>
-            </ul>
-
-            <img src="world/imgs/programs/comuter.png" alt="">
-            <div class="buy-">
-              <strong>150$</strong>
-              <a href="#">اشترك الان</a>
-            </div>
-          </article> -->
-
-          <!-- <article class="card">
-            <header class="card-head">
-              <h3>تطوير مواقع الويب</h3>
-              <p>تعلّم كيف تبني مواقع احترافية باستخدام HTML و CSS و JavaScript، مع التركيز على التصميم، التفاعل، وتجربة
-                المستخدم.</p>
-            </header>
-
-            <ul>
-              <li><span>متوسط -</span></li>
-              <li><span>25 ابريل -</span></li>
-              <li><span>15 ساعات -</span></li>
-            </ul>
-
-            <img src="world/imgs/programs/web-developer.png" alt="">
-            <div class="buy-">
-              <strong>190$</strong>
-              <a href="#">اشترك الان</a>
-            </div>
-          </article> -->
-
-          <!-- <article class="card">
-            <header class="card-head">
-              <h3>تصميم واجهات المستخدم UI/UX</h3>
-              <p>افهم كيف تفكّر كمصمّم، وتعلّم تصميم واجهات مريحة، جذابة، وسهلة الاستخدام مع مبادئ UX الحديثة.</p>
-            </header>
-
-            <ul>
-              <li><span>مبدئ -</span></li>
-              <li><span>25 اغسطس -</span></li>
-              <li><span>20 ساعات -</span></li>
-            </ul>
-
-            <img src="world/imgs/programs/ui-ux.png" alt="">
-            <div class="buy-">
-              <strong>219$</strong>
-              <a href="#">اشترك الان</a>
-            </div>
-          </article> -->
-
-          <!-- <article class="card">
-            <header class="card-head">
-              <h3>مهارات المستقبل التقنية</h3>
-              <p>نظرة شاملة على أهم المهارات التقنية المطلوبة في سوق العمل مثل التفكير المنطقي، العمل على المشاريع، وفهم
-                التقنيات الحديثة.</p>
-
-            </header>
-
-            <ul>
-              <li><span>محترف -</span></li>
-              <li><span>25 يناير -</span></li>
-              <li><span>2 يوم -</span></li>
-            </ul>
-
-            <img src="world/imgs/programs/chart.png" alt="">
-            <div class="buy-">
-              <strong>150$</strong>
-              <a href="#">اشترك الان</a>
-            </div>
-          </article> -->
-
         </section>
 
       </main>
@@ -190,60 +109,53 @@
         <section class="conatiner">
           <article class="card big-card-stats">
             <div class="stat-card">
-              <h4>متدرّبين</h4>
-              <strong>+12,000</strong>
+              <h4></h4>
+              <strong></strong>
             </div>
 
             <div class="stat-card">
-              <h4>طالب نشط سنويًا</h4>
-              <strong>+3,500</strong>
+              <h4></h4>
+              <strong></strong>
             </div>
 
             <div class="stat-card">
-              <h4>كورس متخصص</h4>
-              <strong>+25</strong>
+              <h4></h4>
+              <strong></strong>
             </div>
 
             <div class="stat-card">
-              <h4>مسارات احترافية في تطوير الويب</h4>
-              <strong>+12</strong>
+              <h4></h4>
+              <strong></strong>
             </div>
 
             <div class="stat-card">
-              <h4>مشاريع عمليه داخل الدورات</h4>
-              <strong>+180</strong>
+              <h4></h4>
+              <strong></strong>
             </div>
 
             <div class="stat-card">
-              <h4>نسبة حصول خريجينا على وظيفه</h4>
-              <strong>72%</strong>
+              <h4></h4>
+              <strong></strong>
             </div>
 
           </article>
 
           <article class="card smail-card-whyUs">
-            <h2>لماذا نحن</h2>
-            <p>نتميّز بأن جميع دوراتنا مبنية على مشاريع حقيقية تحاكي بيئة العمل الفعلية، مما يمنح المتدرّب القدرة على
-              بناء ملف أعمال قوي يمكنه من المنافسة في سوق العمل. كما نقدّم دعمًا مستمرًا عبر مجتمع تفاعلي يضم مدربين
-              محترفين ومستشارين تقنيين جاهزين للإجابة على أسئلتك وتوجيهك خطوة بخطوة.</p>
+            <h2></h2>
+            <p></p>
           </article>
 
           <article class="card big-card-start ">
-            <h2>ابدأ رحلتك في تطوير الويب الآن</h2>
-            <p>هل تبحث عن طريقة عملية لتعلّم البرمجة؟ من خلال دوراتنا المتكاملة، ستنتقل من الصفر إلى الاحتراف، وتبني
-              مشاريع حقيقية تؤهلك لسوق العمل. انضم إلى آلاف المتدربين الذين اختاروا طريقهم معنا، وابدأ رحلتك التقنية
-              اليوم.</p>
-            <p>كل دورة مصمّمة بعناية لتكون عملية، واضحة، ومليئة بالتحديات الواقعية، حتى تخرج منها وأنت قادر على بناء
-              مشاريع حقيقية بنفسك.</p>
+            <h2></h2>
+            <p></p>
+            <p></p>
 
-            <a href="#">ابدا الان</a>
+            <a href=""></a>
           </article>
 
           <article class="card smail-card-course">
-            <h2>كورسات برمجة وتطوير ويب</h2>
-            <p>نحن نؤمن أن تعلّم تطوير الويب يجب أن يكون واضحًا، عمليًا، ومبنيًا على خبرة حقيقية في السوق. لذلك أنشأنا
-              منصّة تعليمية متخصصة في تقديم كورسات احترافية تغطي أحدث التقنيات في عالم الويب، بدءًا من أساسيات HTML وCSS
-              وصولًا إلى تطوير تطبيقات متقدمة باستخدام JavaScript وReact وNode.js.</p>
+            <h2></h2>
+            <p></p>
           </article>
 
         </section>
@@ -256,61 +168,6 @@
           <h2>اساله شائعه</h2>
         </header>
 
-        <section class="qustion">
-          <div class="qustion-content">
-            <button type="button"></button>
-            <h2>1) ما هي مدة الكورسات؟</h2>
-          </div>
-
-          <p>معظم الكورسات تمتد من 6 إلى 12 أسبوعًا، مع إمكانية متابعة المحتوى بشكل مرن حسب وقتك.</p>
-        </section>
-
-        <section class="qustion">
-          <div class="qustion-content">
-            <button type="button"></button>
-            <h2>2) هل أحتاج خبرة سابقة في البرمجة؟</h2>
-          </div>
-
-          <p>لا، جميع الكورسات تبدأ من المستوى المبتدئ وتنتقل تدريجيًا إلى المستوى المتقدم، مع شروحات واضحة ومشاريع
-            عملية.</p>
-        </section>
-
-        <section class="qustion">
-          <div class="qustion-content">
-            <button type="button"></button>
-            <h2>3) هل الكورسات معتمدة؟</h2>
-          </div>
-
-          <p>نعم، يحصل المتدرّب على شهادة إتمام رقمية يمكن مشاركتها على LinkedIn أو مع أصحاب العمل.</p>
-        </section>
-
-        <section class="qustion">
-          <div class="qustion-content">
-            <button type="button"></button>
-            <h2>4) كيف يتم تقديم المحتوى؟</h2>
-          </div>
-
-          <p>عبر فيديوهات مسجّلة عالية الجودة، بالإضافة إلى جلسات مباشرة مع المدربين، ومواد مكتوبة للرجوع إليها.</p>
-        </section>
-
-        <section class="qustion">
-          <div class="qustion-content">
-            <button type="button"></button>
-            <h2>5) هل هناك دعم فني أو متابعة؟</h2>
-          </div>
-
-          <p>بالتأكيد، لدينا مجتمع تفاعلي يضم مدربين وخبراء للإجابة على أسئلتك، بالإضافة إلى دعم فني متواصل.</p>
-        </section>
-
-        <section class="qustion">
-          <div class="qustion-content">
-            <button type="button"></button>
-            <h2>6) ما هي تكلفة الكورسات؟</h2>
-          </div>
-
-          <p>الأسعار تبدأ من 99 دولارًا للكورس الواحد، مع خصومات خاصة عند الاشتراك في أكثر من مسار تدريبي.</p>
-        </section>
-
       </main>
     </section>
   </main>
@@ -320,11 +177,12 @@
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/ScrollTrigger.min.js"></script>
   <script type="module" src="src/js/anmtion/Anmtion.js"></script>
   <script type="module" src="src/main.js"></script>
-  <script type="module" src="src/js/sectionsJS/header.js"></script>
   <script type="module" src="src/js/sectionsJS/FAQ.js"></script>
+  <script type="module" src="src/js/sectionsJS/programs.js"></script>
+  <script type="module" src="src/js/sectionsJS/header.js"></script>
   <script type="module" src="src/js/sectionsJS/home.js"></script>
   <script type="module" src="src/js/sectionsJS/aboutUs.js"></script>
-  <script type="module" src="src/js/sectionsJS/programs.js"></script>
+  <script type="module" src="src/js/sectionsJS/whyUs.js"></script>
 </body>
 
 </html>
