--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <main id="hero" class="Main-section">
     <section id="home">
       <div class="filter"></div>
-      <img loading="lazy" src="" alt="" class="D-desktop">
+      <video src="world/imgs/home/0116.webm" autoplay muted loop playsinline class="D-desktop"></video>
 
       <aside class="home-content">
         <h1></h1>
@@ -90,10 +90,10 @@
       <main class="programs-cotent">
         <header class="programs-content-head">
           <ul>
-            <li class="programs-head-children"><button type="button">الكل</button></li>
-            <li class="programs-head-children"><button type="button">مبدئ</button></li>
-            <li class="programs-head-children"><button type="button">متوسط</button></li>
-            <li class="programs-head-children"><button type="button">محترف</button></li>
+            <li class="programs-head-children"><button class="filter-btn" type="button">الكل</button></li>
+            <li class="programs-head-children"><button class="filter-btn" type="button">مبتدئ</button></li>
+            <li class="programs-head-children"><button class="filter-btn" type="button">متوسط</button></li>
+            <li class="programs-head-children"><button class="filter-btn" type="button">محترف</button></li>
           </ul>
         </header>
 
