--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <main id="hero" class="Main-section">
     <section id="home">
       <div class="filter"></div>
-      <video src="world/imgs/home/0116.webm" autoplay muted loop playsinline class="D-desktop"></video>
+      <video src="world/imgs/home/0116.webm" autoplay muted loop playsinline class="D-desktop" loading="lazy"></video>
 
       <aside class="home-content">
         <h1></h1>
@@ -60,15 +60,21 @@
         </article>
 
         <figure class="img-container img-walk">
-          <img src="" alt="">
+          <picture>
+            <img src="" alt="">
+          </picture>
         </figure>
 
         <figure class="img-container img-search">
-          <img src="" alt="">
+          <picture>
+            <img src="" alt="">
+          </picture>
         </figure>
 
         <figure class="img-container img-thinking">
-          <img src="" alt="">
+          <picture>
+            <img src="" alt="">
+          </picture>
         </figure>
 
         <aside class="about-content-tow all-about-content">
