--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 </head>
 
 <body>
+  <!-- <div id="lodaing">
+    <h1>يرجئ انتظار شوي</h1>
+  </div> -->
   <a href="https://wa.me/905344888307?text=مرحبا%%20أريد%20الاستفسار%20عن%20الكورس" id="whts-contect" target="_blank"><img src="world/svgs/whatsapp.svg" alt="whatsapp"></a>
   <header id="head">
     <button type="button" class="closeMenu"><img src="world/svgs/headerSvgs/menu-book.svg" alt="X"></button>
@@ -90,7 +93,8 @@
 
     <section id="programs">
       <header class="programs-head programs-head-children">
-        <h1>برامج التي نقدمها</h1>
+        <h1></h1>
+        <!-- برامج التي نقدمها -->
       </header>
 
       <main class="programs-cotent">
@@ -171,7 +175,8 @@
     <section id="FAQ">
       <main class="qustions-container">
         <header class="faq-head">
-          <h2>اساله شائعه</h2>
+          <h2></h2> 
+          <!-- اساله شائعه -->
         </header>
 
       </main>
@@ -181,14 +186,16 @@
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/gsap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/CustomEase.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/ScrollTrigger.min.js"></script>
-  <script type="module" src="src/js/anmtion/Anmtion.js"></script>
-  <script type="module" src="src/main.js"></script>
-  <script type="module" src="src/js/sectionsJS/FAQ.js"></script>
+  <!-- <script type="module" src="src/js/anmtion/Anmtion.js" defer></script> -->
+  <script type="module" src="src/main.js" defer></script>
+  <script type="module" src="src/performance.js" defer></script>
+
+   <!-- <script type="module" src="src/js/sectionsJS/FAQ.js"></script>
   <script type="module" src="src/js/sectionsJS/programs.js"></script>
   <script type="module" src="src/js/sectionsJS/header.js"></script>
   <script type="module" src="src/js/sectionsJS/home.js"></script>
   <script type="module" src="src/js/sectionsJS/aboutUs.js"></script>
-  <script type="module" src="src/js/sectionsJS/whyUs.js"></script>
+  <script type="module" src="src/js/sectionsJS/whyUs.js"></script>  -->
 </body>
 
 </html>
