--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
 
     <section id="programs">
       <header class="programs-head programs-head-children">
-        <h1></h1>
-        <!-- برامج التي نقدمها -->
+        <h1>برامج التي نقدمها</h1>
       </header>
 
       <main class="programs-cotent">
@@ -172,8 +171,7 @@
     <section id="FAQ">
       <main class="qustions-container">
         <header class="faq-head">
-          <h2></h2> 
-          <!-- اساله شائعه -->
+          <h2>اساله شائعه</h2> 
         </header>
 
       </main>
