--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
   <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="src/style/main.css">
-  <link rel="stylesheet" href="src/style/header1.css">
+  <link rel="stylesheet" href="src/style/allStyle.css">
+  <link rel="stylesheet" href="src/style/cards-desgin/programs-style.css">
+  
+  <!-- <link rel="stylesheet" href="src/style/header1.css">
   <link rel="stylesheet" href="src/style/homeSection2.css">
   <link rel="stylesheet" href="src/style/aboutUs3.css">
   <link rel="stylesheet" href="src/style/whyUs3.css">
   <link rel="stylesheet" href="src/style/courses4.css">
   <link rel="stylesheet" href="src/style/Testimonials6.css">
   <link rel="stylesheet" href="src/style/commonQuestions7.css">
-  <link rel="stylesheet" href="src/style/FAQ8.css">
-  <link rel="stylesheet" href="src/style/cards-desgin/programs-style.css">
+  <link rel="stylesheet" href="src/style/FAQ8.css"> -->
+
   <title>core_academy</title>
 </head>
 
