--- a/index.html
+++ b/index.html
@@ -8,15 +8,6 @@
   <link rel="stylesheet" href="src/style/main.css">
   <link rel="stylesheet" href="src/style/allStyle.css">
   <link rel="stylesheet" href="src/style/cards-desgin/programs-style.css">
-  
-  <!-- <link rel="stylesheet" href="src/style/header1.css">
-  <link rel="stylesheet" href="src/style/homeSection2.css">
-  <link rel="stylesheet" href="src/style/aboutUs3.css">
-  <link rel="stylesheet" href="src/style/whyUs3.css">
-  <link rel="stylesheet" href="src/style/courses4.css">
-  <link rel="stylesheet" href="src/style/Testimonials6.css">
-  <link rel="stylesheet" href="src/style/commonQuestions7.css">
-  <link rel="stylesheet" href="src/style/FAQ8.css"> -->
 
   <title>core_academy</title>
 </head>
@@ -98,11 +89,8 @@
 
       <main class="programs-cotent">
         <header class="programs-content-head">
-          <ul>
+          <ul id="filter_container">
             <li class="programs-head-children"><button class="filter-btn" type="button">الكل</button></li>
-            <li class="programs-head-children"><button class="filter-btn" type="button">مبتدئ</button></li>
-            <li class="programs-head-children"><button class="filter-btn" type="button">متوسط</button></li>
-            <li class="programs-head-children"><button class="filter-btn" type="button">محترف</button></li>
           </ul>
         </header>
 
@@ -172,10 +160,10 @@
     </section>
 
     <section id="FAQ">
+      <header class="faq-head">
+        <h2>اساله شائعه</h2> 
+      </header>
       <main class="qustions-container">
-        <header class="faq-head">
-          <h2>اساله شائعه</h2> 
-        </header>
 
       </main>
     </section>
