--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <main id="hero" class="Main-section">
     <section id="home">
       <div class="filter"></div>
-      <video src="world/imgs/home/0116.webm" autoplay muted loop playsinline class="D-desktop" loading="lazy"></video>
+      <video src="world/imgs/home/0116.webm" autoplay muted loop playsinline class="D-desktop" loading="eager" fetchpriority="high"></video>
 
       <aside class="home-content">
         <h1></h1>
