--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
         </article>
 
         <figure class="img-container img-walk">
-          <picture>
-            <img src="" alt="">
-          </picture>
+          <video src="" autoplay muted loop playsinline></video>
         </figure>
 
         <figure class="img-container img-search">
