--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
   <main id="hero" class="Main-section">
     <section id="home">
       <div class="filter"></div>
-      <video src="world/imgs/home/0116.webm" autoplay muted loop playsinline class="D-desktop" loading="eager" fetchpriority="high"></video>
+      <video src="world/imgs/home/0116.webm" autoplay muted loop playsinline class="D-desktop" loading="eager" fetchpriority="high">
+        <source src="world/imgs/home/0116.mp4" type="video/mp4">
+        <source src="world/imgs/home/0116.webm" type="video/webm">
+      </video>
 
       <aside class="home-content">
         <h1></h1>
@@ -52,7 +55,10 @@
         </article>
 
         <figure class="img-container img-walk">
-          <video src="" autoplay muted loop playsinline></video>
+          <video autoplay muted loop playsinline>
+            <source src="" type="">
+            <source src="" type="">
+          </video>
         </figure>
 
         <figure class="img-container img-search">
